@@ -8,12 +8,12 @@ package Log::Log4perl::Appender::RabbitMQ;
 
 our @ISA = qw/ Log::Log4perl::Appender /;
 
-use Net::RabbitMQ;
+use Net::AMQP::RabbitMQ 0.004002;
 use Readonly;
 
 Readonly my $CHANNEL => 1;
 
-my $RabbitMQClass = 'Net::RabbitMQ';
+my $RabbitMQClass = 'Net::AMQP::RabbitMQ';
 
 ##################################################
 sub new {
@@ -137,7 +137,7 @@ sub log {
 
     my $mq = $self->{mq};
 
-    # do nothing if the Net::RabbitMQ object is missing
+    # do nothing if the Net::AMQP::RabbitMQ object is missing
     return unless $mq;
 
     # customize the routing key for this message by 
@@ -155,7 +155,7 @@ sub log {
         1;
     } or do {
         # If you got an error warn about it and clear the 
-        # Net::RabbitMQ object so we don't keep trying
+        # Net::AMQP::RabbitMQ object so we don't keep trying
         warn "ERROR logging to RabbitMQ via ".ref($self).": $@\n";
         $self->{mq} = undef;
     };
@@ -188,18 +188,18 @@ __END__
 
 =head1 DESCRIPTION
 
-This is a L<Log::Log4perl> appender for publishing log messages to RabbitMQ group using L<Net::RabbitMQ>.
-Defaults for unspecified options are provided by L<Net::RabbitMQ> and can be found in it's documentation.
+This is a L<Log::Log4perl> appender for publishing log messages to RabbitMQ group using L<Net::AMQP::RabbitMQ>.
+Defaults for unspecified options are provided by L<Net::AMQP::RabbitMQ> and can be found in it's documentation.
 
 =head1 CONFIG OPTIONS
 
 All of the following options can be passed to the constructor, or be specified in the Log4perl config file. Unless otherwise
-stated, any options not specified will get whatever defaults L<Net::RabbitMQ> provides. See the documentation for that module
+stated, any options not specified will get whatever defaults L<Net::AMQP::RabbitMQ> provides. See the documentation for that module
 for more details.
 
 =head3 Connection Options
 
-These options are used in the call to L<Net::RabbitMQ::connect()|Net::RabbitMQ/"methods"> when the appender is created.
+These options are used in the call to L<Net::AMQP::RabbitMQ::connect()|Net::AMQP::RabbitMQ/"Methods"> when the appender is created.
 
 =over 4
 
@@ -225,7 +225,7 @@ Defaults to localhost.
 
 =head3 Exchange Options
 
-Except for L<declare_exchange>, these options are used in a call to L<Net::RabbitMQ::exchange_declare()|Net::RabbitMQ/"methods"> to declare the
+Except for L<declare_exchange>, these options are used in a call to L<Net::AMQP::RabbitMQ::exchange_declare()|Net::AMQP::RabbitMQ/"Methods"> to declare the
 exchange specified on the L<exchange> option (See L<Publish Options>).
 If L<declare_exchange> is false (the default) the exchange will not be declared and must already exist.
 
@@ -251,7 +251,7 @@ Delete the exchange when this proccess disconnects? Boolean, defaults to 1.
 
 =head3 Publish Options
 
-These options are used in the call to L<Net::RabbitMQ::publish()|Net::RabbitMQ/"methods"> for each message.
+These options are used in the call to L<Net::AMQP::RabbitMQ::publish()|Net::AMQP::RabbitMQ/"Methods"> for each message.
 
 =over 4
 
