@@ -3,6 +3,7 @@
     - remove obscure hash slice syntax since _connect_cached only returns one
       arg anyway
     - fix end_to_end.t test failure with Test::Net::RabbitMQ >= 0.07
+    - use Net::AMQP::RabbitMQ instead of the unmaintained Net::RabbitMQ
 
 0.102030  2010-07-22 08:47:59 EDT
     - no real changes to the code, just the build
